--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "5.0.1",
+    "react-modal": "3.16.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "recharts": "2.12.3",
+    "web-vitals": "^2.1.4",
+    "uuid": "9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
